# qt-simple-image-proc

./: .gitignore  README.md
ImageDemo/: CMakeLists.txt  README.md
ImageDemo/qml/: PreviewView.qml
ImageDemo/shaders/: blur.frag  passthrough.vert
ImageDemo/src/: EffectSettings.cpp  EffectSettings.h  MainWindow.cpp  MainWindow.h  PhotoSyncClient.cpp  PhotoSyncClient.h  PreviewController.cpp  PreviewController.h  main.cpp
QTSimpleImageProc/: CMakeLists.txt  Main.qml  main.cpp
QTSimpleImageProc/shaders/: basic.frag
